fixed the spacing on the heading

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ p {
   } 
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 769px) {
   p {
     font-size: 32px;
   }
